--- a/club-manager-eventstore-akka/src/test/resources/application.conf
+++ b/club-manager-eventstore-akka/src/test/resources/application.conf
@@ -1,4 +1,5 @@
 akka {
+  actor.allow-java-serialization = true
   persistence {
     journal.plugin = "inmemory-journal"
     snapshot-store.plugin = "inmemory-snapshot-store"
