--- a/club-manager-member/pom.xml
+++ b/club-manager-member/pom.xml
@@ -45,7 +45,7 @@
         </dependency>
         <dependency>
             <groupId>com.hazelcast</groupId>
-            <artifactId>hazelcast-client</artifactId>
+            <artifactId>hazelcast-all</artifactId>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
