--- a/club-manager-person/pom.xml
+++ b/club-manager-person/pom.xml
@@ -57,7 +57,7 @@
         </dependency>
         <dependency>
             <groupId>com.hazelcast</groupId>
-            <artifactId>hazelcast-client</artifactId>
+            <artifactId>hazelcast-all</artifactId>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
