--- a/club-manager-springboot-app/src/main/resources/application.conf
+++ b/club-manager-springboot-app/src/main/resources/application.conf
@@ -28,8 +28,8 @@ akka {
   //
   //  cluster {
   //    seed-nodes = [
-  //      "akka.tcp://mym-akka@127.0.0.1:42551",
-  //      "akka.tcp://mym-akka@127.0.0.1:42552"]
+  //      "akka.tcp://cm-akka@127.0.0.1:42551",
+  //      "akka.tcp://cm-akka@127.0.0.1:42552"]
   //
   //    # auto downing is NOT safe for production deployments.
   //    # you may want to use it during development, read more about it in the docs.
