--- a/club-manager-servicetest/pom.xml
+++ b/club-manager-servicetest/pom.xml
@@ -61,6 +61,7 @@
                                 <image>
                                     <alias>clubmanager-springboot</alias>
                                     <name>clubmanager:${project.version}</name>
+
                                     <run>
                                         <namingStrategy>alias</namingStrategy>
                                         <!-- Do not pull this image, because we want to use the locally built one. -->
@@ -68,11 +69,10 @@
                                         <network>
                                             <mode>custom</mode>
                                             <name>custom_network</name>
-                                            <alias>jboss</alias>
+                                            <alias>springboot</alias>
                                         </network>
                                         <dependsOn>
-<!--                                            <container>database</container>-->
-<!--                                            <container>club-manager-wiremock</container>-->
+                                            <container>clubmanager-database</container>
                                         </dependsOn>
                                         <ports>
                                             <port>8080:8080</port>
@@ -97,16 +97,29 @@
                                         </wait>
                                     </run>
                                 </image>
-<!--                                <image>-->
-<!--                                    <alias>database</alias>-->
-<!--                                    <name>postgres:9</name>-->
-<!--                                    <run>-->
-<!--                                        <wait>-->
-<!--                                            <log>database system is ready to accept connections</log>-->
-<!--                                            <time>20000</time>-->
-<!--                                        </wait>-->
-<!--                                    </run>-->
-<!--                                </image>-->
+                                <image>
+                                    <alias>clubmanager-database</alias>
+                                    <name>postgres:9</name>
+                                    <run>
+                                        <env>
+                                            <POSTGRES_PASSWORD>password</POSTGRES_PASSWORD>
+                                            <POSTGRES_USER>postgres</POSTGRES_USER>
+                                            <POSTGRES_DB>eventdb</POSTGRES_DB>
+                                        </env>
+                                        <network>
+                                            <mode>custom</mode>
+                                            <name>custom_network</name>
+                                            <alias>postgresexe</alias>
+                                        </network>
+                                        <ports>
+                                            <port>5432:5432</port>
+                                        </ports>
+                                        <wait>
+                                            <log>database system is ready to accept connections</log>
+                                            <time>20000</time>
+                                        </wait>
+                                    </run>
+                                </image>
                             </images>
                         </configuration>
                         <executions>
