--- a/pom.xml
+++ b/pom.xml
@@ -243,16 +243,16 @@
             <dependency>
                 <groupId>org.junit.jupiter</groupId>
                 <artifactId>junit-jupiter</artifactId>
-                <version>5.4.2</version>
+                <version>5.8.0-M1</version>
                 <scope>test</scope>
             </dependency>
 
-<!--            <dependency>-->
-<!--                <groupId>org.junit.jupiter</groupId>-->
-<!--                <artifactId>junit-jupiter-api</artifactId>-->
-<!--                <version>5.4.2</version>-->
-<!--                <scope>test</scope>-->
-<!--            </dependency>-->
+            <dependency>
+                <groupId>org.junit.jupiter</groupId>
+                <artifactId>junit-jupiter-api</artifactId>
+                <version>5.8.0-M1</version>
+                <scope>test</scope>
+            </dependency>
 
 <!--            <dependency>-->
 <!--                <groupId>org.junit.jupiter</groupId>-->
