--- a/club-manager-person/pom.xml
+++ b/club-manager-person/pom.xml
@@ -23,6 +23,11 @@
 
         <!-- 3rd party -->
         <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>jsr250-api</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <dependency>
             <groupId>javax.validation</groupId>
             <artifactId>validation-api</artifactId>
             <version>2.0.1.Final</version>
